fix: overlap of list items - for user experience

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -238,7 +238,7 @@ nav a:hover span {
 #hamburger ul li:hover {
 	background: var(--highlight-color);
 	transform: translateX(50px);
-	transform: translateY(-50px);
+	transform: translateY(20px);
 }
 
 #hamburger ul li:last-child::after {
@@ -414,9 +414,11 @@ nav a:hover span {
 		flex-direction: column;
 		align-items: center;
 	}
+
 	.banner-container {
-		padding: 0;
 		margin: 0;
+		margin-top: 15%;
+		padding: 0;
 	}
 }
 
